--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <meta name="Author" content="">
         <meta name="Keywords" content="">
         <meta name="Description" content="">
+		<!--QQ-->
+        <meta itemprop="name" content="BinFinn"/>
+        <meta itemprop="image" content="https://binfinn.github.io/not-selected.svg" />
+        <meta name="description" itemprop="description" content="BinFinn Blog" />
+
+		<!--WeChat-->
+
         <title>BinFinn</title>
 		<style>
 		* {
